[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hn-scraper-pro"
version = "0.1.0"
description = "Production-grade async Hacker News scraper"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "rich>=13.7",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
hn-scraper = "hn_scraper.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"